# moe-project-manager

./: Cargo.toml  README.org  monologue.org
src/: config.rs  db.rs  main.rs
src/cmd/: add.rs  cmd.rs  mod.rs
src/utils/: fzf.rs  mod.rs
